# OSRM_FFI

./: .gitignore  CMakeLists.txt  README.md  osrm_wrapper.cpp
EVSimulation/: .editorconfig  ChargingModel.cs  Classes.cs  EVSimulation.csproj  Program.cs  prepare_osrm.sh  tem_prepare_osrm.sh
EVSimulation/data/: output.osm.pbf
osrm-backend/test/data/: monaco.osm.pbf
